feat: Add Checkboxes for people who are going to be asked (#52)